--- a/grp124/build.xml
+++ b/grp124/build.xml
@@ -19,6 +19,9 @@
     <!-- ant clean -->
     <target name="clean">
         <!-- vymaz vsetko co tam uz bolo -->
+        <delete includeEmptyDirs="true"
+        dir="lib/objects" defaultexcludes="false" 
+        />
         <delete dir="${doc.dir}"/>
         <delete dir="${build.dir}"/>
         <delete dir="${dest.dir}"/>
@@ -30,6 +33,9 @@
     
     <!-- ant build (kompiluje triedy) -->
     <target name="build">
+        <exec executable="/bin/bash">
+            <arg value="lib/get-libs.sh"/>
+        </exec>
         <mkdir dir="${build.dir}" />
         <javac includeantruntime="false" srcdir="${src.dir}" destdir="${build.dir}" />
     </target>
@@ -60,7 +66,6 @@
     
     <target name="compile" depends="clean, build,jar,doc" />    
     <target name="main" depends="clean,build,jar,doc" />    
-    
     <description>Builds and runs project ija2015-client.</description>
 </project>
 
